@@ -6,6 +6,8 @@ ikiwiki (2.66) UNRELEASED; urgency=low
   * attachment: Add admin() pagespec to test if the uploading user is a wiki
     admin.
   * git: Fix handling of utf-8 filenames in recentchanges.
+  * tag: Make edit link for new tags ensure that the tags are created
+    inside tagbase, when it's set.
 
  -- Joey Hess <joeyh@debian.org>  Thu, 25 Sep 2008 13:45:55 -0400
 
